<resources>
    <string name="app_name">MAPWEEK</string>
    <string name="sub">предмет</string>
    <string name="room">аудитория/кабинет</string>
    <string name="corpus">корпус</string>
    <string name="teacher">преподаватель</string>
    <string name="dayWeek">день недели</string>
    <string name="timeOfSub">время начала и окончания занятий (вводите время в формате чч.мм)</string>
    <string name="beginningOfSub">время начала</string>
    <string name="endOfSub">время окончания</string>
    <string name="add">добавить</string>
    <string name="friday">Пт</string>
    <string name="monday">ПН</string>
    <string name="sunday">ВС</string>
    <string name="saturday">СБ</string>
    <string name="thursday">ЧТ</string>
    <string name="tuesday">ВТ</string>
    <string name="wednesday">СР</string>
    <string name="plus">+</string>
    <string-array name="dayOfWeek">
        <item>понедельник</item>
        <item>вторник</item>
        <item>среда</item>
        <item>четверг</item>
        <item>пятница</item>
        <item>суббота</item>
        <item>воскресенье</item>
    </string-array>
</resources>